tests/ui/parser/issues/issue-62895.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-62895.rs:6:7
   |
LL | mod _ {
   |       ^ unclosed delimiter
LL | pub    g() -> is
LL | (), w20);
   |        ^ mismatched closing delimiter

error: mismatched closing delimiter: `)`
  --> $DIR/issue-62895.rs:4:7
   |
LL | mod _ {
   |       ^ unclosed delimiter
...
LL | (), w20);
   |        ^ mismatched closing delimiter

error: aborting due to 2 previous errors

