tests/ui/parser/issues/issue-62895.rs
fn main() {}

fn v() -> isize {
mod _ {
pub fn g() -> isizee {
mod _ {
pub    g() -> is
(), w20); //~ ERROR mismatched closing delimiter
}
(), w20); //~ ERROR mismatched closing delimiter
}
